GEODE-8751: changes to use old HttpURLConnection API instead of JDK11 new HttpClient API